test/fails/bad_tags/assign2.lgl
tag a is vec2;
tag b is vec2;

a x = [1., 2.]:b; // Unrelated tags